test/libsolidity/syntaxTests/pragma/broken_version_7.sol
pragma solidity >0.5.0<;
// ----
// ParserError 1684: (0-24): Invalid version pragma. Expected version number but reached end of pragma.
